[gd_scene load_steps=6 format=3 uid="uid://0q4ihoflybxj"]

[ext_resource type="Script" path="res://addons/nerdfonts/finder/window.gd" id="1_1j1fa"]
[ext_resource type="Script" path="res://addons/nerdfonts/finder/option.gd" id="2_04t0g"]
[ext_resource type="FontFile" path="res://addons/nerdfonts/fonts/SymbolsNerdFontMono-Regular.ttf" id="3_font"]
[ext_resource type="Script" path="res://addons/nerdfonts/NerdFont.gd" id="4_swgx5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.15, 0.15, 0.18, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Finder" type="AcceptDialog"]
title = "NerdFont Icons"
size = Vector2i(800, 600)
transient = false
exclusive = false
script = ExtResource("1_1j1fa")

[node name="Box" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="Box"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="CatLabel" type="Label" parent="Box/LeftPanel"]
layout_mode = 2
text = "Categories"

[node name="CategoryList" type="ItemList" parent="Box/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="RightPanel" type="VBoxContainer" parent="Box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option" type="Button" parent="Box/RightPanel"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn")
script = ExtResource("2_04t0g")

[node name="Margin" type="MarginContainer" parent="Box/RightPanel/Option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Box" type="VBoxContainer" parent="Box/RightPanel/Option/Margin"]
layout_mode = 2
alignment = 1

[node name="Icon" type="Label" parent="Box/RightPanel/Option/Margin/Box"]
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_swgx5")
icon_size = 32

[node name="Name" type="Label" parent="Box/RightPanel/Option/Margin/Box"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "icon"
horizontal_alignment = 1
text_overrun_behavior = 3
clip_text = true

[node name="GroupBadge" type="Label" parent="Box/RightPanel/Option"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 14.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 8
text = "md"
horizontal_alignment = 2

[node name="Filters" type="HBoxContainer" parent="Box/RightPanel"]
layout_mode = 2

[node name="Search" type="LineEdit" parent="Box/RightPanel/Filters"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter by name..."
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Scroll" type="ScrollContainer" parent="Box/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Options" type="HFlowContainer" parent="Box/RightPanel/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusBar" type="Label" parent="Box/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 2

[node name="NoResults" type="VBoxContainer" parent="Box/RightPanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Icon" type="Label" parent="Box/RightPanel/NoResults"]
layout_mode = 2
size_flags_vertical = 0
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_swgx5")
icon_size = 24
icon_type = "fa"
icon_name = "circle-question"

[node name="Label" type="Label" parent="Box/RightPanel/NoResults"]
layout_mode = 2
size_flags_horizontal = 4
text = "No Icons Found"

[connection signal="text_changed" from="Box/RightPanel/Filters/Search" to="." method="_on_search_text_changed"]
